--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -254,7 +254,7 @@
     <string name="Specify_private_game_name">"非公開ゲームの名前を指定する"</string>
     <string name="In_Game_Chat">"ゲーム中のチャット"</string>
     <string name="My_Status_">"ステータス:"</string>
-    <string name="Game_Size_">"ゲームサイズ:"</string>
+    <string name="Game_Size_">"ルームサイズ:"</string>
 
     <string name="Server_Restart_">"サーバーを再起動します:"</string>
     <string name="GOAL_">"ゴール！"</string>
