--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1046,7 +1046,7 @@
     <string name="Sell">販売</string>
     <string name="community_skin_requirement">コミュニティを使うには『カスタムスキンを有効にする』を購入する必要があります。</string>
     <string name="You_can_purchase_this_community_skin_for_">このコミュニティスキンは次の価格で購入できます:</string>
-    <string name="community_skin_information_for_buyer" translatable="true" tools:ignore="Untranslatable">コミュニティスキンは他のプレイヤーから送られます。コミュニティスキンは、カスタムスキンと同様に機能し、標準スキンと連動させることができます。</string>
+    <string name="community_skin_information_for_buyer" translatable="true" tools:ignore="Untranslatable">コミュニティスキンは他のプレイヤーから贈られます。コミュニティスキンは、カスタムスキンと同じように使え、標準スキンと組み合わせることができます。</string>
     <string name="VIEW_UPLOADER">アップローダーを表示</string>
     <string name="POPULAR">人気</string>
     <string name="NEW">新しい</string>
@@ -1085,7 +1085,7 @@
     <string name="Halo_Animations">オーラアニメーション</string>
     <string name="Trick_Notifications">トリック通知を有効</string>
     <string name="Channel">チャンネル</string>
-    <string name="Choose_Text_Size">Choose Text Size</string>
+    <string name="Choose_Text_Size">テキストサイズを選択</string>
     <string name="LEVEL_COLOR">レベルカラー</string>
     <string name="level_color_instructions" translatable="true">あなたのレベルカラーを選択してください。</string>
     <string name="INITIATE">INITIATE</string>
@@ -1138,7 +1138,7 @@
     <string name="Enable_Profile_Colors">プロフィールカラーを有効にする</string>
     <string name="Session_Stats">Session Stats</string>
     <string name="Time_">Time:</string>
-    <string name="Show_Session_Stats">Show Session Stats</string>
+    <string name="Show_Session_Stats">最後のゲームの統計を表示</string>
     <string name="VALENTINES_DAY">"バレンタインデー"</string>
     <string name="Giveaways_">抽選！</string>
     <string name="Max_XP_Chain_">Max XP Chain:</string>
@@ -1187,7 +1187,7 @@
     <string name="Button_3D">3Dボタン</string>
     <string name="Hide_Button_">ボタンを非表示にする？</string>
     <string name="Show_Boost_Button">ブーストボタンを表示にする</string>
-    <string name="Spectate_Killer_On_Death">Spectate Killer On Death</string>
+    <string name="Spectate_Killer_On_Death">自動でキラーを観戦</string>
     <string name="Rainbow_Holes">Rainbow Holes</string>
     <string name="LIFE_STEAL">LIFE STEAL</string>
     <string name="Kicked_From_Game_">あなたはルームから追い出されました！</string>
@@ -1206,7 +1206,7 @@
     <string name="Background_Scale_">背景スケール:</string>
     <string name="Background_Lightness_">背景の明るさ:</string>
     <string name="Background_Image_">背景画像:</string>
-    <string name="INVERT_SELECTION">INVERT\nSELECTION</string>
+    <string name="INVERT_SELECTION">選択を反転</string>
     <string name="MINIMAP">ミニマップ</string>
     <string name="Victorious">Victorious</string>
     <string name="Dominant">Dominant</string>
@@ -1228,7 +1228,7 @@
     <string name="Quad">Quadruple</string>
     <string name="Middle_East">中東</string>
     <string name="XP_4x">経験値4倍</string>
-    <string name="You_cannot_play_for_x_minutes_">あなたは%d分間プレイできません。</string>
+    <string name="You_cannot_play_for_x_minutes_">あなたが%d分間プレイできません。</string>
     <string name="x4_Clan_XP_Perm">永久にクラン経験値4倍！</string>
     <string name="x4_Clan_XP_7_days">クラン経験値4倍7日間</string>
     <string name="x4_Clan_XP_1_Day">クラン経験値4倍1日間</string>
@@ -1259,11 +1259,11 @@
     <string name="PLAY_SOLO">一人プレイ</string>
     <string name="SET_EMOTE">絵文字を設定</string>
     <string name="Winner_Winner_Chicken_Dinner">Winner Winner Chicken Dinner!</string>
-    <string name="Win_a_Battle_Royale_">Win a Battle Royale.</string>
-    <string name="Battle_">Battle!</string>
-    <string name="BATTLE_ROYALE">BATTLE ROYALE</string>
-    <string name="Battle_Royale">Battle Royale</string>
-    <string name="The_winner_will_receive_x_plasma_">The winner will receive %s plasma!</string>
+    <string name="Win_a_Battle_Royale_">ロワイヤルモードゲームを勝つ</string>
+    <string name="Battle_">バトル！</string>
+    <string name="BATTLE_ROYALE">ロワイヤルモード</string>
+    <string name="Battle_Royale">ロワイヤルモード</string>
+    <string name="The_winner_will_receive_x_plasma_">勝者は％sプラズマを受け取ります！</string>
     <string name="admin_commands">"
 コマンド：
 !kick [0-31]
@@ -1313,8 +1313,8 @@
     <string name="India">インド</string>
     <string name="Tutorial">チュートリアル</string>
     <string name="TYCOON">タイクーン</string>
-    <string name="CLAN_BACKGROUND_COLOR">CLAN BACKGROUND COLOR</string>
-    <string name="activate">Activate</string>
+    <string name="CLAN_BACKGROUND_COLOR">クラン背景カラー</string>
+    <string name="activate">有効にする</string>
     <string name="clan_id">クランID</string>
     <string name="language_change_warning">言語を変更するには、アプリを再起動する必要があります。</string>
     <string name="xmas_gift_boost_message">あなたは1日間3xプラズマブーストのギフトを受け取りました！</string>
