--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -1320,7 +1320,7 @@
     <string name="xmas_gift_boost_message">あなたは1日間3xプラズマブーストのギフトを受け取りました！</string>
     <string name="no_response">No response from server. Please check the internet connection.</string>
     <string name="RAMADAN">ラマダン</string>
-    <string name="SUDDEN_ATTACK">突然のアタック</string>
+    <string name="SUDDEN_ATTACK">サドンアタック</string>
     <string name="_2x_skin_resolution">カスタムスキンの画質2倍</string>
     <string name="pm">PM</string>
     <string name="You_are_already_friends_">あなたはすでにフレンドです.</string>
