--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -979,7 +979,7 @@
     <string name="ArenaDescriptionUltra">勝者は%sプラズマ獲得できます</string>
     <string name="BANNED">禁止済</string>
     <string name="CLAN_MEMBERS">クランメンバー</string>
-    <string name="CLAN_REQUESTS">クランリクエスト</string>
+    <string name="CLAN_REQUESTS">クランに参加リクエスト</string>
     <string name="Pet_1">ペット1</string>
     <string name="Pet_2">ペット2</string>
     <string name="Second_Pet">ペットを同時に2匹連れることができます！</string>
