--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -891,7 +891,7 @@
     <string name="REMOVE">削除</string>
     <string name="BAN">禁止</string>
     <string name="MODERATORS">モデレーター</string>
-    <string name="ALL_CLAN">クランに\n全ての人</string>
+    <string name="ALL_CLAN">クラン\n全員</string>
     <string name="CO_LEADER">Coリーダー</string>
     <string name="CLAN_HOUSE">クランハウス</string>
 
